--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/pg": "^8.15.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.71",
+    "@langchain/mcp-adapters": "^0.6.0",
     "@langchain/openai": "^0.6.8",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "dotenv": "^17.2.1",
