--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,10 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=tintas
 POSTGRES_PORT=5432
-DB_HOST=db
+POSTGRES_HOST=db
 
 # Configuração da aplicação
 APP_PORT=3000
 NODE_ENV=development
+
+OPENAI_API_KEY=api_key_aqui
